Fixed spacing between recipes

--- a/index.css
+++ b/index.css
@@ -286,13 +286,13 @@ body {
   }
 
   .card {
-    min-width: 150px;
+    min-width: 190px;
     min-height: 126px;
-    margin-right: 100px;
+    margin-right: 46px;
     border: 1px solid #ccc;
     overflow: hidden;
     border-radius: 10px; /* Adjust the value as needed for desired roundness */
-  }
+}
   
   .image-container {
     height: 90px;
